--- a/sources/LambdaSerif-BoldItalic.ufo/layercontents.plist
+++ b/sources/LambdaSerif-BoldItalic.ufo/layercontents.plist
@@ -3,8 +3,8 @@
 <plist version="1.0">
 <array>
   <array>
-    <string>Back</string>
-    <string>glyphs.B_ack</string>
+    <string>public.background</string>
+    <string>glyphs.public.background</string>
   </array>
   <array>
     <string>public.default</string>
