--- a/sources/LambdaSerif-Bold.ufo/fontinfo.plist
+++ b/sources/LambdaSerif-Bold.ufo/fontinfo.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
   <key>ascender</key>
@@ -144,7 +144,7 @@
     </dict>
   </array>
   <key>openTypeHeadCreated</key>
-  <string>2023/10/22 21:07:31</string>
+  <string>2023/10/22 23:45:27</string>
   <key>openTypeHheaAscender</key>
   <integer>894</integer>
   <key>openTypeHheaDescender</key>
