--- a/sources/LambdaSerif-BoldItalic.ufo/fontinfo.plist
+++ b/sources/LambdaSerif-BoldItalic.ufo/fontinfo.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
   <key>ascender</key>
@@ -98,7 +98,7 @@
 2006-05-01: v(2.0.0)stable
 2007-01-10: v(2.3.0)stable</string>
   <key>openTypeHeadCreated</key>
-  <string>2023/10/22 21:08:00</string>
+  <string>2023/10/22 23:46:44</string>
   <key>openTypeHheaAscender</key>
   <integer>894</integer>
   <key>openTypeHheaDescender</key>
