fix: update font metadata

--- a/sources/LambdaSerif-Italic.ufo/fontinfo.plist
+++ b/sources/LambdaSerif-Italic.ufo/fontinfo.plist
@@ -6,10 +6,12 @@
   <integer>754</integer>
   <key>capHeight</key>
   <integer>645</integer>
+  <key>copyright</key>
+  <string>2023 The Lambda Fonts Project Authors</string>
   <key>descender</key>
   <integer>-246</integer>
   <key>familyName</key>
-  <string>Libertinus Serif</string>
+  <string>Lambda Serif</string>
   <key>guidelines</key>
   <array>
     <dict>
@@ -91,12 +93,6 @@
   </array>
   <key>italicAngle</key>
   <integer>-12</integer>
-  <key>note</key>
-  <string>2003-08-29: Created.
-2004-07-25: v(1.0) release candidate
-2005-12-28: v(1.1.0)stable
-2006-05-01: v(2.0.0)stable
-2007-01-10: v(2.3.0)stable</string>
   <key>openTypeHeadCreated</key>
   <string>2023/10/22 23:46:09</string>
   <key>openTypeHheaAscender</key>
@@ -112,9 +108,9 @@
   <key>openTypeNameLicenseURL</key>
   <string>https://scripts.sil.org/OFL</string>
   <key>openTypeNameManufacturer</key>
-  <string>Caleb Maclennan</string>
+  <string>Lynn Kirby</string>
   <key>openTypeNameManufacturerURL</key>
-  <string>https://github.com/alerque/libertinus</string>
+  <string>https://github.com/LynnKirby/lambda-fonts</string>
   <key>openTypeOS2FamilyClass</key>
   <array>
     <integer>1</integer>
@@ -132,8 +128,6 @@
   <integer>-246</integer>
   <key>openTypeOS2TypoLineGap</key>
   <integer>0</integer>
-  <key>openTypeOS2VendorID</key>
-  <string>QUE </string>
   <key>openTypeOS2WeightClass</key>
   <integer>400</integer>
   <key>openTypeOS2WidthClass</key>
@@ -182,9 +176,9 @@
     <integer>-227</integer>
   </array>
   <key>postscriptFontName</key>
-  <string>LibertinusSerif-Italic</string>
+  <string>LambdaSerif-Italic</string>
   <key>postscriptFullName</key>
-  <string>Libertinus Serif Italic</string>
+  <string>Lambda Serif Italic</string>
   <key>postscriptOtherBlues</key>
   <array>
     <integer>-238</integer>
@@ -211,7 +205,9 @@
   <key>unitsPerEm</key>
   <integer>1000</integer>
   <key>versionMajor</key>
-  <integer>5</integer>
+  <integer>1</integer>
+  <key>versionMinor</key>
+  <integer>0</integer>
   <key>xHeight</key>
   <integer>429</integer>
 </dict>
