--- a/sources/LambdaSerif-Bold.ufo/fontinfo.plist
+++ b/sources/LambdaSerif-Bold.ufo/fontinfo.plist
@@ -6,10 +6,12 @@
   <integer>754</integer>
   <key>capHeight</key>
   <integer>645</integer>
+  <key>copyright</key>
+  <string>2023 The Lambda Fonts Project Authors</string>
   <key>descender</key>
   <integer>-246</integer>
   <key>familyName</key>
-  <string>Libertinus Serif</string>
+  <string>Lambda Serif</string>
   <key>guidelines</key>
   <array>
     <dict>
@@ -103,18 +105,6 @@
   </array>
   <key>italicAngle</key>
   <integer>0</integer>
-  <key>note</key>
-  <string>2003-08-29: Created.
-2004-07-25: v(1.0) release candidate
-2005-12-28: v(1.1.0) stable
-2006-01-01: v(2.0.0) stable
-2006-09-05: v(2.2.0) stable
-2006-12-04: v(2.3.0) stable
-2007-03-11: v(2.4.0) stable
-2007-06-11: v(2.6.0) stable
-2007-12-00: v(2.7.0) stable
-2008-06-00: v(2.8.14) stable
-</string>
   <key>openTypeGaspRangeRecords</key>
   <array>
     <dict>
@@ -158,9 +148,9 @@
   <key>openTypeNameLicenseURL</key>
   <string>https://scripts.sil.org/OFL</string>
   <key>openTypeNameManufacturer</key>
-  <string>Caleb Maclennan</string>
+  <string>Lynn Kirby</string>
   <key>openTypeNameManufacturerURL</key>
-  <string>https://github.com/alerque/libertinus</string>
+  <string>https://github.com/LynnKirby/lambda-fonts</string>
   <key>openTypeOS2FamilyClass</key>
   <array>
     <integer>1</integer>
@@ -178,8 +168,6 @@
   <integer>-246</integer>
   <key>openTypeOS2TypoLineGap</key>
   <integer>0</integer>
-  <key>openTypeOS2VendorID</key>
-  <string>QUE </string>
   <key>openTypeOS2WeightClass</key>
   <integer>700</integer>
   <key>openTypeOS2WidthClass</key>
@@ -206,9 +194,9 @@
     <integer>698</integer>
   </array>
   <key>postscriptFontName</key>
-  <string>LibertinusSerif-Bold</string>
+  <string>LambdaSerif-Bold</string>
   <key>postscriptFullName</key>
-  <string>Libertinus Serif Bold</string>
+  <string>Lambda Serif Bold</string>
   <key>postscriptOtherBlues</key>
   <array>
     <integer>-238</integer>
@@ -236,7 +224,9 @@
   <key>unitsPerEm</key>
   <integer>1000</integer>
   <key>versionMajor</key>
-  <integer>5</integer>
+  <integer>1</integer>
+  <key>versionMinor</key>
+  <integer>0</integer>
   <key>xHeight</key>
   <integer>433</integer>
 </dict>
