fix[Serif]: set fontinfo.plist styleMapStyleName

--- a/sources/LambdaSerif-Bold.ufo/fontinfo.plist
+++ b/sources/LambdaSerif-Bold.ufo/fontinfo.plist
@@ -215,7 +215,7 @@
   <key>styleMapFamilyName</key>
   <string>Lambda Serif</string>
   <key>styleMapStyleName</key>
-  <string>regular</string>
+  <string>bold</string>
   <key>styleName</key>
   <string>Bold</string>
   <key>unitsPerEm</key>
