--- a/sources/LambdaSerif-BoldItalic.ufo/fontinfo.plist
+++ b/sources/LambdaSerif-BoldItalic.ufo/fontinfo.plist
@@ -231,7 +231,7 @@
   <key>styleMapFamilyName</key>
   <string>Lambda Serif</string>
   <key>styleMapStyleName</key>
-  <string>regular</string>
+  <string>bold italic</string>
   <key>styleName</key>
   <string>Bold Italic</string>
   <key>unitsPerEm</key>
