--- a/sources/LambdaSerif-Italic.ufo/fontinfo.plist
+++ b/sources/LambdaSerif-Italic.ufo/fontinfo.plist
@@ -224,7 +224,7 @@
   <key>styleMapFamilyName</key>
   <string>Lambda Serif</string>
   <key>styleMapStyleName</key>
-  <string>regular</string>
+  <string>italic</string>
   <key>styleName</key>
   <string>Italic</string>
   <key>unitsPerEm</key>
